Bug 149987 - Amarok does not support .oga (audio/ogg) files
Summary: Amarok does not support .oga (audio/ogg) files
Status: RESOLVED FIXED
Alias: None
Product: taglib
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Scott Wheeler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-09-18 21:53 UTC by Daniel Aleksandersen
Modified: 2007-09-28 12:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Aleksandersen 2007-09-18 21:53:16 UTC
Version:           unknown (using KDE 3.5.7, Kubuntu (feisty) 4:3.5.7-0ubuntu1~feisty2)
Compiler:          Target: x86_64-linux-gnu
OS:                Linux (x86_64) release 2.6.20-15-generic

Hi,

With the release of FLAC 1.2.1 things have changed in Ogg FLAC encoded files. First of all they use the new file extension .oga and MIME type audio/ogg, as spesificed by the new technical recommendations from Xiph.Org Foundation. Refer to http://opensource-notebook.com/2007/09/ogg-mime-types/

However Amarok does not support playing these new .oga files. By changing the extension to .ogg you can play the files. But the metadata information (Vorbis comments) appears to be missing.
Comment 1 Daniel Aleksandersen 2007-09-18 21:56:10 UTC
Encode a test file using FLAC 1.2.1 or newer and
$ flac --ogg --tag="ARTIST=Should appear in artist column" input.wav
Comment 2 Scott Wheeler 2007-09-27 23:41:18 UTC
SVN commit 717998 by wheeler:

Note OGA as the new extension for Ogg FLAC.

(Note: for the bug report, this won't actually make things work in Amarok, in fact, this change
wasn't needed at all for it to work there.)

BUG:149987


 M  +1 -0      CMakeLists.txt  
 M  +1 -0      Makefile.am  
 M  +4 -0      fileref.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=717998
Comment 3 Daniel Aleksandersen 2007-09-28 00:00:12 UTC
The full list of new MIME types and file extensions for Xiph.Org Foundation's multimedia file formats is available at http://wiki.xiph.org/index.php/MIME_Types_and_File_Extensions

Maybe you could add them all?
Comment 4 Scott Wheeler 2007-09-28 12:00:13 UTC
Well, uhm, most of the formats aren't supported by TagLib.