Note OGA as the new extension for Ogg FLAC.

(Note: for the bug report, this won't actually make things work in Amarok, in fact, this change
wasn't needed at all for it to work there.)

BUG:149987


git-svn-id: svn://anonsvn.kde.org/home/kde/trunk/kdesupport/taglib@717998 283d02a7-25f6-0310-bc7c-ecb5cbfe19da